# Domothink-core-old

./: .gitignore  CMakeLists.txt  Makefile  NB  README.md
Client/: client.cpp  exception.cpp  main.cpp  utils.cpp
Client/include/: client.hpp  exception.hpp
POSTGRE/: Makefile
POSTGRE/include/: IdataBase.hpp
POSTGRE/src/: main.cpp  test.cpp
Server/: exception.cpp  main.cpp  server.cpp  utils.cpp
Server/include/: exception.h  exception.hpp~  server.hpp
Unix/: Makefile
src/: exception.cpp  main.cpp  server.cpp
src/api/MySQL/mysql-connector-c++-1.1.6/: ZERO_CHECK.vcxproj.filters
src/api/MySQL/mysql-connector-c++-1.1.6/cppconn/: version_info.h
src/api/MySQL/mysql-connector-c++-1.1.6/examples/: PACKAGE.vcxproj.filters  connection_meta_schemaobj.vcxproj.filters  prepared_statement.vcxproj  prepared_statement.vcxproj.filters  statement.vcxproj
src/api/MySQL/mysql-connector-c++-1.1.6/test/: INSTALL.vcxproj  static_test.vcxproj.filters
src/api/MySQL/mysql-connector-c++-1.1.6/test/CJUnitTestsPort/: INSTALL.vcxproj
src/api/MySQL/mysql-connector-c++-1.1.6/test/framework/: test_framework.vcxproj
src/api/MySQL/mysql-connector-c++-1.1.6/test/unit/: INSTALL.vcxproj.filters  PACKAGE.vcxproj.filters
src/api/MySQL/mysql-connector-c++-1.1.6/test/unit/bugs/: INSTALL.vcxproj  PACKAGE.vcxproj.filters  cmake_install.cmake
src/api/MySQL/mysql-connector-c++-1.1.6/test/unit/classes/: INSTALL.vcxproj  (+8 more)
src/api/PostgreSQL/include/: postgre.hpp
src/api/PostgreSQL/src/: exception.cpp  postgre.cpp
src/api/db/: DataBaseException.cpp  DataBaseException.h  IdataBase.h  database_test.cpp
src/api/db/MySQL/: Makefile  MySQLException.cpp  MySQLException.h  mainMySQL.cpp  mysql.cpp  mysql.h
src/api/db/MySQL/mysql-connector-c++-1.1.6/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  Makefile  ZERO_CHECK.vcxproj  cmake_install.cmake
src/api/db/MySQL/mysql-connector-c++-1.1.6/cppconn/: CMakeCache.txt  INSTALL.vcxproj.filters  Makefile
src/api/db/MySQL/mysql-connector-c++-1.1.6/driver/: INSTALL.vcxproj  INSTALL.vcxproj.filters  Makefile  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  version_info.h
src/api/db/MySQL/mysql-connector-c++-1.1.6/examples/: INSTALL.vcxproj  debug_output.vcxproj  dynamic_load.vcxproj  dynamic_load.vcxproj.filters  resultset.vcxproj.filters  resultset_binary.vcxproj
src/api/db/MySQL/mysql-connector-c++-1.1.6/test/: INSTALL.vcxproj.filters  cmake_install.cmake
src/api/db/MySQL/mysql-connector-c++-1.1.6/win/: config.cmake
src/api/db/PostgreSQL/: Makefile  Makefile.unix  postgre.cpp
src/api/db/PostgreSQL/include/: postgre.hpp
src/api/db/PostgreSQL/src/: main.cpp
src/api/mysql/: mySql.cpp  mySql.h
src/api/mysql/mysql-connector-c++-1.1.6/: CPackSourceConfig.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj
src/api/mysql/mysql-connector-c++-1.1.6/cppconn/: INSTALL.vcxproj  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  cmake_install.cmake
src/api/mysql/mysql-connector-c++-1.1.6/driver/: mysqlcppconn-static.vcxproj  mysqlcppconn-static.vcxproj.filters  mysqlcppconn.vcxproj
src/api/mysql/mysql-connector-c++-1.1.6/examples/: INSTALL.vcxproj.filters  connect.vcxproj  connection_meta_schemaobj.vcxproj  exceptions.vcxproj  resultset.vcxproj  resultset_binary.vcxproj.filters  resultset_meta.vcxproj  resultset_meta.vcxproj.filters  resultset_types.vcxproj  resultset_types.vcxproj.filters  statement.vcxproj.filters
src/api/mysql/mysql-connector-c++-1.1.6/test/: Makefile  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  driver_test.vcxproj  driver_test.vcxproj.filters  static_test.vcxproj
src/api/mysql/mysql-connector-c++-1.1.6/test/CJUnitTestsPort/: INSTALL.vcxproj.filters  Makefile  PACKAGE.vcxproj.filters  cmake_install.cmake
src/api/mysql/mysql-connector-c++-1.1.6/test/framework/: INSTALL.vcxproj  INSTALL.vcxproj.filters  Makefile  PACKAGE.vcxproj  PACKAGE.vcxproj.filters
src/api/mysql/mysql-connector-c++-1.1.6/test/unit/: INSTALL.vcxproj  Makefile  cmake_install.cmake
src/include/: exception.h  server.h  utils.h
test/PostgreSQL/: Makefile
test/PostgreSQL/include/: exception.hpp  postgre.hpp
test/PostgreSQL/src/: main.cpp  postgre.cpp
test/example/: a.out  cppcheck  test.cpp  test_boost
test/http/: client.cpp  main.cpp
test/http/client/: Makefile
test/http/include/: exception.hpp
test/mysql/: mySql.cpp
test/mysql/mysql-connector-c++-1.1.6/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  MYSQLCPPCONN.sln  PACKAGE.vcxproj.filters  cmake_install.cmake  install_manifest.txt
test/mysql/mysql-connector-c++-1.1.6/cppconn/: cmake_install.cmake  version_info.h
test/mysql/mysql-connector-c++-1.1.6/driver/: cmake_install.cmake
test/mysql/mysql-connector-c++-1.1.6/examples/: Makefile  PACKAGE.vcxproj  cmake_install.cmake  connect.vcxproj.filters  debug_output.vcxproj.filters  exceptions.vcxproj.filters
test/mysql/mysql-connector-c++-1.1.6/test/: cmake_install.cmake  driver_test  static_test
test/mysql/mysql-connector-c++-1.1.6/test/CJUnitTestsPort/: CJUnitTestsPort.vcxproj.filters  PACKAGE.vcxproj  cmake_install.cmake
test/mysql/mysql-connector-c++-1.1.6/test/framework/: cmake_install.cmake  test_framework.vcxproj.filters
test/mysql/mysql-connector-c++-1.1.6/test/unit/: cmake_install.cmake
test/mysql/mysql-connector-c++-1.1.6/test/unit/bugs/: Makefile  cmake_install.cmake
test/mysql/mysql-connector-c++-1.1.6/test/unit/classes/: cmake_install.cmake  preparedstatement  savepoint  statement  test_art_resultset.vcxproj  test_parametermetadata.vcxproj.filters  test_preparedstatement.vcxproj.filters  test_resultsetmetadata.vcxproj  test_resultsetmetadata.vcxproj.filters  test_statement.vcxproj.filters  test_uri.vcxproj  test_variant.vcxproj  uri  variant
test/mysql/mysql-connector-c++-1.1.6/test/unit/example/: PACKAGE.vcxproj.filters  cmake_install.cmake
test/mysql/mysql-connector-c++-1.1.6/test/unit/performance/: Makefile  cmake_install.cmake  perf_statement  perf_statement.vcxproj
test/mysql/mysql-connector-c++-1.1.6/test/unit/template_bug_group/: INSTALL.vcxproj  Makefile  bug456  cmake_install.cmake
(+174 files in other folders)
